Removed inline-block statement that was causing layout bugs

--- a/content/css/_counters.sass
+++ b/content/css/_counters.sass
@@ -1,7 +1,6 @@
 [data-counter]:after
 	content: attr(data-counter)
 	position: relative
-	display: inline-block
 	left: 10px
 	font-size: 16px
 
